final de la pagina web

--- a/911 Turbo.html
+++ b/911 Turbo.html
@@ -3,23 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="porsche.css">
+    <link rel="stylesheet" href="Estilobn.css">
     <title>Actividad2</title>
 </head>
 <body>
+
     <header>
-        <h1>AGENCIAS DE PORSCHE</h1>
+        
         <nav>
-            <ul>
+            <input type="checkbox" id="toggle">
+            <div class="logo">
+                AGENCIAS DE PORSCHE
+            </div>
+            <ul class="list">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="911 Carrera Coupe.html">Modelos 911 Carrera Coupe</a></li>
                 <li><a href="911 Targa.html">Modelos 911 Targa</a></li>
                 <li><a href="911 Turbo.html">Modelos 911 Turbo</a></li>
                 <li><a href="911 GT3 RS.html">Modelos 911 GT3 RS</a></li>
             </ul>
+            <label for="toggle" class="icon-bars">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </label>
         </nav>
+
     </header>
 
     <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
     <main>
         
         <h2>Sucursales Disponibles En Monterrey</h2>
@@ -50,6 +69,9 @@
             </tfoot>
         </table>
 
+        <br>
+        <br>
+
         <dl>
             <dt style="color: blue;"><h3>Porsches que se encuentran en la agencias de Monterrey</h3></dt>
             <dd><i>911 Carrera Coupe</i></dd>
@@ -73,14 +95,24 @@
                 </blockquote>
             </section>
 
+            <br>
+            <br>
+
             <section>
                 <h2>¿Por qué el Porsche 911 es un referente?</h2>
                 <p> <b> <i> El 911 Turbo combina deportividad con facilidad de uso diario, dinamismo emotivo con fiabilidad y prestaciones estimulantes con eficiencia siendo uno de los deportivos mejor equipados en el mercado <br> El Porsche 911 es un automóvil deportivo de lujo fabricado por Porsche AG desde 1964. <br> El modelo original tenía un motor bóxer de seis cilindros con dos litros de cubicaje y 130 HP, y podía alcanzar una velocidad máxima de 210 km/h. </i> </b> </p>
             </section>
 
+            <br>
+            <br>
+
             <section>
                 <h2>Especificaciones del 911 Turbo</h2>
                 <table border="1">
+                    <colgroup>
+                        <col>
+                        <col class="desc">
+                    </colgroup>
                     <thead>
                         <tr>
                             <th colspan="2">Modelos 911 Turbo</th>
@@ -142,10 +174,12 @@
     <footer>
         <p style="color: blue;">¡Fin de la Pagina Web!</p>
         <p style="color: blue;">Gracias Por Su Compra</p>
+        <br>
         <hr>
         <address>
             <p style="color: red;">Desarrollado por <abbr title="Hector Maximiliano Melendez Ibarra">HMMI</abbr></p>
             <p style="color: red;">Derechos resevados &copy;</p>
+            <br>
             <p><small>The content is licensed under a Creative Commons <span style="color: darkblue;">Attribution-ShareAlike 2.5 Generic License.</span></small></p>
         </address>
     </footer>
